iaf/gateway.yaml

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: iafoosball-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iafoosball
spec:
  hosts:
    - "*"
  gateways:
    - iafoosball-gateway
  http:
    - match:
        - uri:
            exact: /matches
      route:
        - destination:
            host: livematches
            port:
              number: 8013
